@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2011, 2013-2015 - TortoiseSVN
+// Copyright (C) 2011, 2013-2016 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -77,7 +77,7 @@ BOOL SettingsDialogs3::OnInitDialog()
 
     m_tooltips.AddTool(IDC_ALLOWPREFETCH, IDS_SETTINGS_REPOBROWSER_PREFETCH_TT);
     m_tooltips.AddTool(IDC_SHOWEXTERNALS, IDS_SETTINGS_REPOBROWSER_EXTERNALS_TT);
-    m_tooltips.AddTool(IDC_SHOWEXTERNALS, IDS_SETTINGS_REPOBROWSER_LOCKS_TT);
+    m_tooltips.AddTool(IDC_SHOWLOCKS, IDS_SETTINGS_REPOBROWSER_LOCKS_TT);
 
     UpdateData(FALSE);
     return TRUE;
