@@ -20,6 +20,8 @@ Version 1.9.5
        in TortoiseMerge. (Stefan)
 - BUG: TortoiseMerge could hang with "ignore comments"
        enabled. (Sven Strickroth)
+- BUG: The patch window in TMerge could be shown outside of a 
+       multi-monitor setup, i.e. not in a visible area. (Stefan)
 
 Version 1.9.4
 - BUG: GDI Resource leak when showing a file list. (Stefan, Ivan)
